correçao de erro ao clicar desafiar antes de uma escolha

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,11 +174,11 @@ label {
     }
 
     #choose:hover {
-        background: #6984DB;
+        background: #4B9E28;
     }
 
     #reset:hover {
-        background: #6984DB;
+        background: #8F2844;
     }
 /* Botões */
 
